--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,33 @@
 # Dependencies
 node_modules/
+/.pnp
+.pnp.js
 
-# Build output
-/build/
-/dist/
+# Testing
+/coverage
 
-# Misc
-.DS_Store
+# Production
+/build
+/dist
+
+# Environment files
 .env
-.env.*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # IDE
+.idea/
 .vscode/
-.idea/ 
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db 
